- fix smart search display on IE11

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -279,6 +279,7 @@ h4, .h4 {
 
     input,
     a.dropdown-toggle {
+      height: @navbar-height - 5px; // for IE11
       line-height: @navbar-height - 12px;
     }
 
